# coal-release

./: .gersemirc  .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  0001-disable-unittests.patch  0002-disable-documentation.patch  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  debian.store  dockgen.toml  package.xml  patches.conf  pixi.toml  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: dockgen.yml  macos-linux-pip.yml  macos-linux-windows-pixi.yml  ros_ci.yml  update-flake-lock.yml
debian/: changelog  control  copyright  gbp.conf  rules
development/: release.md
doc/: CMakeLists.txt
python/: CMakeLists.txt
rpm/: ros-humble-coal.spec  ros-jazzy-coal.spec  ros-kilted-coal.spec  ros-lyrical-coal.spec  ros-rolling-coal.spec  template.spec
src/: CMakeLists.txt
test/: CMakeLists.txt  utility.h
test/python_unit/: CMakeLists.txt
